fix header spacing

--- a/src/components/scss/_elements/header.scss
+++ b/src/components/scss/_elements/header.scss
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     flex-direction: row;
-    margin: 3rem 0 2.5rem 0;
+    margin: 2rem 0 3.5rem 0;
     border: 1px solid $color-white;
     font-family: $font-family-mono;
 
